--- a/style.css
+++ b/style.css
@@ -5,9 +5,16 @@
     font-family: 'Josefin Sans', sans-serif;
     box-sizing: border-box;
 }
-body {
-    background-color: black; 
+:root {
+    --bacground-color:#171823;
+    --boxColors:#25273D;
+    --letterColors:#C8CBE7;
+    --underlineColor:#393A4B;
 }
+body {
+    background-color:var(--bacground-color); 
+}
+
 .container {
     display: grid;
     place-items: center;
@@ -39,7 +46,7 @@ input[type=text]{
     width: 327px;
     height: 48px;
     border-radius: 5px;
-    background: #25273D;
+    background: var(--boxColors);
     box-shadow: 0px 35px 50px -15px rgba(0, 0, 0, 0.50);
     border: none;
     outline: none;
@@ -65,13 +72,13 @@ input[type=text]{
     width: 327px;
     height: 100%;
     border-radius: 5px;
-    background: #25273D;
+    background: var(--boxColors);
     box-shadow: 0px 35px 50px -15px rgba(0, 0, 0, 0.50);
 }
 .underline {
     width: 327px;
     height: 1px;
-    background: #393A4B;
+    background: var(--underlineColor);
 }
 ul li {
     list-style: none;
@@ -80,7 +87,7 @@ ul li {
     user-select: none;
     cursor: pointer;
     position: relative;
-    color: #C8CBE7;
+    color: var(--letterColors);
     font-family: Josefin Sans;
     font-style: normal;
     font-weight: 400;
@@ -107,13 +114,13 @@ ul li::before{
     height: 48px;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
-    background: #25273D;
+    background: var(--boxColors);
     box-shadow: 0px 35px 50px -15px rgba(0, 0, 0, 0.50);
     column-gap: 138px;
     margin-top: -15px;
 }
 .UTh1 {
-    color: #5B5E7E;
+    color: var(--letterColors);
     cursor: pointer;
     font-family: Josefin Sans;
     font-size: 13px;
@@ -141,12 +148,12 @@ ul li.checked::before{
     width: 327px;
     height: 48px;
     border-radius: 5px;
-    background: #25273D;
+    background: var(--boxColors);
     box-shadow: 0px 35px 50px -15px rgba(0, 0, 0, 0.50);
 }
 .LB1 {
     cursor: pointer;
-    color: #5B5E7E;
+    color: var(--letterColors);
     font-family: Josefin Sans;
     font-size: 14px;
     font-style: normal;
@@ -160,7 +167,7 @@ ul li.checked::before{
 footer {
     cursor: pointer;
     margin-top: 50px;
-    color: #5B5E7E;
+    color: var(--letterColors);
     text-align: center;
     font-family: Josefin Sans;
     font-size: 14px;
@@ -172,4 +179,10 @@ footer {
 footer:hover {
     color: #3A7CFD;
 }
-
+.light-mode{
+    --bacground-color:#FAFAFA;
+    --boxColors:#FFF;
+    --letterColors:#494C6B;
+    --underlineColor:#E3E4F1;
+    transition: 1.5s;
+}
